testdata/baselines/reference/submodule/compiler/declarationEmitClassSetAccessorParamNameInJs.errors.txt
foo.js(7,16): error TS8010: Type annotations can only be used in TypeScript files.


==== foo.js (1 errors) ====
    // https://github.com/microsoft/TypeScript/issues/55391
    
    export class Foo {
        /**
         * Bar.
         *
         * @param {string} baz Baz.
                   ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
         */
        set bar(baz) {}
    }
    